--- a/src/App.css
+++ b/src/App.css
@@ -6,18 +6,15 @@
   font-weight: 400;
 
 }
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -51,12 +48,12 @@
   display: flex;
   justify-content: flex-end;
 }
-.col-4 {
+.header div, .subHeader div{
   padding: 0!important;
-
 }
 .profile {
   border-radius: 100%!important;
+  width: 35px;
 }
 .subHeader {
   background-color:transparent;
@@ -64,7 +61,7 @@
   display: flex;
   /* max-height: fit-content; */
   overflow-y: hidden;
-  padding: 4px;
+  padding: 8px 4px 4px 8px;
   justify-content: center;
   width: 100%;
   height: 100%;
@@ -78,8 +75,21 @@
   text-align: center;
   text-decoration: none !important;
 }
-.header img {
+.logoDiv img {
   height: 30px;
+}
+
+.headerButtonSearch {
+  display: inline-block!important;
+}
+
+.searchButtonText {
+  padding-right: 60px
+}
+.boardName {
+  font-size: 18px!important;
+  font-weight: 700!important;
+  padding: 0 12px;
 }
 .headerButton {
   background-color: hsla(0,0%,100%,.24);
@@ -90,17 +100,23 @@
   max-height: 100%;
   position: relative;
   white-space: normal;
-  padding: 6px 8px;
+  padding: 6px 10px;
   vertical-align: middle;
   color: white;
   border: none;
   font-size: 14px;
+  font-weight: 600;
   height: 32px;
   /* line-height: 32px; */
   max-width: 400px;
   float: right;
   margin: 0 4px 4px 0;
-
+}
+.verticalLine {
+  float: left;
+  border-left: 1px solid hsla(0,0%,100%,.24);
+  height: 16px;
+  margin: 8px 8px 12px 4px;
 }
 .board {
   background-color: #0079be;
@@ -114,8 +130,7 @@
   max-width: 100%;
 }
 .contentContainer {
-  padding: 8px 4px 4px 8px;
-  padding: 8px 4px 4px 8px;
+    padding: 8px 4px 4px 4px;
     user-select: none;
     white-space: nowrap;
     margin-bottom: 8px;
@@ -203,6 +218,7 @@
 	cursor: pointer;
 	outline: inherit;
   padding: 0px 8px;
+  color:#5e6c84;
 }
 .deleteCard {
   background: none;
@@ -219,8 +235,8 @@
   margin-bottom: 0;
   overflow-y: auto;
   overflow-x: hidden;
-  margin: 0 4px;
-  padding: 0 4px;
+  margin: 0 0 0 4px;
+  padding: 0 0 0 4px;
   z-index: 1;
   min-height: 0;
 }
@@ -259,7 +275,12 @@
 }
 .cardInputContainer {
   width: 100%;
-  min-height: 20px;
+  background-color: #ebecf0;
+  border-radius: 3px;
+  height: auto;
+  min-height: 80px;
+  padding: 4px;
+  transition: background 85ms ease-in,opacity 40ms ease-in,border-color 85ms ease-in;
 }
 .cardInputContainer input{
   width: 100%;
@@ -285,12 +306,10 @@
 }
 .addListContainer {
   box-sizing: border-box;
-    display: inline-block;
-    vertical-align: top;
-    white-space: nowrap;
-    margin: 0 4px;
-    
-    
+  display: inline-block;
+  vertical-align: top;
+  white-space: nowrap;
+  margin: 0 4px; 
 }
 .addList {
   width: 275px;
@@ -307,7 +326,7 @@
   border: none;
   font-weight: 600;
   line-height: 20px;
-
+  display: inline-block;
 }
 .deleteList {
   display: inline-block;
@@ -373,6 +392,22 @@
   padding: 0;
   width: 100%;
 }
+.sidebarIcon {
+  font-size: 20px;
+  height: 20px;
+  line-height: 20px;
+  width: 20px;
+  position: absolute;
+  top: 6px;
+  left: 12px;
+}
+.square > svg > path {
+  fill: #0079be;
+}
+.iconsColor > svg > path {
+  color: #42526e;
+}
+
 .sidebarContent {
   text-align: left;
   box-sizing: border-box;
@@ -398,7 +433,6 @@
   position: relative;
 }
 .sidebarBoxContent {
-    margin-left: 35px;
     padding: 10px!important;
     box-shadow: 0 1px 1px rgb(9 30 66 / 25%), 0 0 0 1px rgb(9 30 66 / 8%);
     background-color: white;
@@ -420,5 +454,31 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media (max-width:992px) {
+  .subheaderLeft {
+    height: 80px;
+    flex-wrap: wrap;
+  }
+  .contentContainer {
+    padding-top: 2.5rem;
+  }
+}
+@media (max-width:500px) {
+  .contentContainer {
+    padding-top: 9.5rem;
+  }
+  .header > .headerColLeft > .headerButton > .buttonText, .header > .headerColLeft > .headerButton > .searchButtonText  {
+    display: none;
+  }
+}
+@media (max-width:375px) {
+  .contentContainer {
+    padding-top: 11.5rem;
+  }
+  .homeButton, .infoButton, .butlerText  {
+    display: none;
   }
 }
